test/libsolidity/syntaxTests/literalSuffixes/application/invalid_suffix_in_delete.sol
function suffix(string memory s) pure suffix returns (string memory) { return s; }

contract C {
    function f() public pure {
        delete "abc" suffix;
    }
}
// ----
// TypeError 4247: (143-155): Expression has to be an lvalue.
